--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -54,6 +54,11 @@
         border-radius: 5px;
         cursor: pointer;
         font-weight: 500;
+
+        &:disabled {
+          background-color: #1f8ff197;
+          cursor: not-allowed;
+        }
       }
     }
   }
