--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -134,6 +134,10 @@
       padding: 10px;
       font-size: 16px;
       border-radius: 10px;
+
+      &:disabled {
+        cursor: not-allowed;
+      }
     }
     .emoji {
       position: relative;
@@ -151,6 +155,11 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
+
+      &:disabled {
+        background-color: #5182feb4;
+        cursor: not-allowed;
+      }
     }
   }
 }
