--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  body,
+  html,
+  #root {
+    font-family: "Roboto", sans-serif;
+  }
 }
 
 body {
