--- a/src/components/detail/detail.css
+++ b/src/components/detail/detail.css
@@ -1,7 +1,10 @@
 .detail {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 
   .user {
+    /* flex: 1; */
     padding: 25px 20px;
     display: flex;
     flex-direction: column;
@@ -18,6 +21,7 @@
   }
 
   .info {
+    flex: 1;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -40,55 +44,37 @@
       }
 
       .photos {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+        width: 100%;
         margin-top: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 4px;
 
-        .photoItem {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-
-          .photoDetail {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-
-            img {
-              width: 40px;
-              height: 40px;
-              border-radius: 5px;
-              object-fit: cover;
-            }
-
-            span {
-              font-size: 14px;
-              color: lightgray;
-              font-weight: 300;
-            }
-          }
-        }
-
-        .icon {
-          width: 30px;
-          height: 30px;
-          background-color: rgba(17, 24, 40, 0.3);
-          padding: 10px;
-          border-radius: 50%;
-          cursor: pointer;
+        img {
+          width: 60px;
+          height: 60px;
+          border-radius: 5px;
+          object-fit: cover;
         }
       }
     }
+  }
+  .buttons {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
     button {
+      /* width: 100%; */
       padding: 10px 20px;
-      background-color: rgba(230, 74, 105, 0.553);
+      background-color: rgba(220, 20, 60, 0.796);
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       &:hover {
-        background-color: rgba(220, 20, 60, 0.796);
+        background-color: rgba(230, 74, 105, 0.553);
       }
 
       &.logout {
