--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -1,6 +1,6 @@
 .chatList {
   flex: 1;
-  overflow: scroll;
+  overflow-y: auto;
   .search {
     display: flex;
     align-items: center;
@@ -44,7 +44,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    padding: 20px;
+    padding: 10px;
     cursor: pointer;
     border-bottom: 1px solid #dddddd35;
 
@@ -70,4 +70,19 @@
       }
     }
   }
+}
+
+/* For Chrome, Edge, and Safari */
+.chatList::-webkit-scrollbar {
+  width: 8px;
+  background: transparent;
+}
+
+.chatList::-webkit-scrollbar-thumb {
+  background: #5183fe;
+  border-radius: 8px;
+}
+
+.chatList::-webkit-scrollbar-track {
+  background: transparent;
 }
