--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  gap: 100px;
+  gap: 80px;
 
   .item {
     flex: 1;
@@ -13,6 +13,7 @@
     gap: 20px;
 
     form {
+      width: 60%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -20,6 +21,8 @@
       gap: 20px;
 
       input {
+        width: 100%;
+        flex: 1;
         padding: 20px;
         border: none;
         outline: none;
@@ -32,7 +35,8 @@
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
+        gap: 10px;
         cursor: pointer;
         text-decoration: underline;
 
@@ -54,6 +58,7 @@
         border-radius: 5px;
         cursor: pointer;
         font-weight: 500;
+        font-size: 14px;
 
         &:disabled {
           background-color: #1f8ff197;
