--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -8,13 +8,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
+    color: #fff;
   }
 
   .icons {
@@ -27,4 +21,19 @@
       cursor: pointer;
     }
   }
+}
+.profile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.profile-letter {
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(17, 25, 40, 0.5);
 }
