--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html,
   font-family: "Roboto", sans-serif;
 }
 body {
-  background-image: url("/bg.jpg");
+  background-image: url("imgs/bg.jpg");
   display: flex;
   align-items: center;
   justify-content: center;
